<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdvw_restaruant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_green"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_rest"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="1dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_rest_imge"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/image_thumbnail"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/cv_rest"
                android:layout_toRightOf="@id/cv_rest"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/txt_restname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/restnamerestnamerestnamerestnamerestnamerestnamerestnamerestname"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"

                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:id="@+id/txt_rating"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:layout_weight="0.25"
                        android:background="@drawable/new_rounded_corner_btn"
                        android:textSize="12sp"
                        android:text="@string/_4_5"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        tools:ignore="RtlCompat,RtlHardcoded"
                        android:padding="5dp"/>
                </LinearLayout>


                <TextView
                    android:id="@+id/txt_rest_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/pizza"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:textColor="@color/dark_gray"
                    android:layout_marginTop="5dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/rs200_per_person"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/_50_mins"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/closes_in_25_mintues"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:textColor="@color/red"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/kitchendetails"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:textColor="@color/blue"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"/>



            </LinearLayout>



        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>